Tweak <app-tag> title for IIFE demo.

--- a/demo/iife.html
+++ b/demo/iife.html
@@ -19,7 +19,7 @@
 	<div id="app">
 
 		<!-- Go ahead and edit this title. Changes will be forwarded automatically. -->
-		<app-tag title="Module Demo">
+		<app-tag title="IIFE Demo">
 
 			<intro-tag>
 				<p>See <a href="/">Module demo</a>.</p>
