--- a/demo/iife.html
+++ b/demo/iife.html
@@ -49,5 +49,8 @@
 
 	</div>
 
+	<!-- Reference some large external scripts to intentionally increase DOMContentLoaded time. -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.js"></script>
+
 </body>
 </html>
