--- a/demo/iife.html
+++ b/demo/iife.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8"/>
 	<link rel="icon" type="image/svg+xml" href="/svelte-retag-favicon.svg"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>svelte-retag demo</title>
+	<title>svelte-retag demo (iife)</title>
 
 	<!-- Vite isn't really well setup to export an entire app as IIFE (hence the weirdness and manual copying here) since
 	it expects all script references to be modules (but still supports compiling to IIFE). IIFE/UMD is still quite valuable
 	for our purposes, however: rendering custom elements very quickly and early with reduced CLS. Anyway, we must manually
 	point to the assets here, since Vite expects scripts to be modules, this page won't really work without some trickery. -->
-	<link rel="stylesheet" href="assets/index.css">
-	<script src="assets/index.iife.js"></script>
+	<link rel="stylesheet" href="assets/main.css">
+	<script src="assets/main.iife.js"></script>
 
 </head>
 <body>
@@ -19,10 +19,11 @@
 	<div id="app">
 
 		<!-- Go ahead and edit this title. Changes will be forwarded automatically. -->
-		<app-tag title="IIFE Demo">
+		<app-tag pagetitle="IIFE/UMD" page="iife">
 
 			<intro-tag>
-				<p>See <a href="/">Module demo</a>.</p>
+				<p>Built using <code>iife</code> format and included via standard <code>&lt;script&gt;</code> inside the <code>&lt;header&gt;</code> tag.</p>
+				<p>While this reduces cumulative layout shift (CLS), it is not conducive to code splitting and may generate a large build package (thus still taking a little while to download and initialize).</p>
 			</intro-tag>
 
 			<example-tag>
