--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
 		<app-tag pagetitle="Module" page="index">
 
 			<intro-tag>
-				 <p>Built with the standard <code>es</code> format and included via <code>&lt;script type=&quot;module&quot;&gt;</code>.</p>
+				 <p>Built with <code>es</code> format and included via <code>&lt;script type=&quot;module&quot;&gt;</code>.</p>
 			</intro-tag>
 
 			<example-tag>
@@ -41,9 +41,6 @@
 		</app-tag>
 
 	</div>
-
-	<!-- Reference some large external scripts to intentionally increase DOMContentLoaded time. -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.js"></script>
 
 </body>
 </html>
