--- a/demo/hydratable.html
+++ b/demo/hydratable.html
@@ -27,23 +27,22 @@
 		<app-tag pagetitle="Module with Hydration" page="hydratable" data-svelte-retag-hydratable=""><svelte-retag><main><div class="svelte-1sneid9"><a href="https://github.com/patricknelson/svelte-retag/" target="_blank" rel="noreferrer"><img src="/assets/svelte-retag.svg" class="logo svelte-1sneid9" alt="svelte-retag logo (link to GitHub repo)"></a></div> <nav class="svelte-1sneid9">Demos:
 			<ul class="svelte-1sneid9"><li class="svelte-1sneid9"><a href="index.html" class="svelte-1sneid9">Module</a></li><li class="svelte-1sneid9"><a href="hydratable.html" class="svelte-1sneid9 current">Module with Hydration</a></li><li class="svelte-1sneid9"><a href="iife.html" class="svelte-1sneid9">IIFE/UMD</a></li></ul></nav> <h1>Module with Hydration</h1> <svelte-retag-default>
 
-			<intro-tag data-svelte-retag-hydratable=""><svelte-retag><svelte-retag-default>
-				<p>Built with the standard <code>es</code> format and included via
-					<code>&lt;script type="module"&gt;</code>. However, the HTML on this page was rendered ahead of time
-					and then initialized after page load to enable interactivity (a.k.a. “hydrated”).</p>
-				<p>Combines the best of both worlds. Specifically: Performing SSR/SSG and then enabling hydration helps to
-					<strong>eliminate</strong> cumulative layout shift (CLS) while still allowing better code splitting and the
-					<code>defer</code>'ed behavior of <code>type="module"</code>. All while using web components with
-					the light DOM.</p>
-			</svelte-retag-default> <hr> <h2>Performance</h2> <p>You can compare performance in each demo by opening DevTools, disabling cache, and then
-				enabling network throttling (e.g. try "Fast 3G"). This page actually loads <code>angular.js</code> in a <code>&lt;script&gt;</code>
-				tag lower in the page which causes the time to <code>DOMContentLoaded</code> to increase on slower connections.</p> <p class="loading-status svelte-1ljvyts">DOMContentLoaded in <span>269.70ms</span>.</p> <hr> <p>This demo is implemented entirely using Svelte components and placed in the page using custom elements. Its purpose
-				purely to demonstrate the following:</p> <ul><li>Slots (default and named slots)</li>
-				<li>Nesting within slots</li>
-				<li>The speed differences between deferred ESM vs. IIFE (on large pages), particularly with regard to CLS (Content
-					Layout Shift)</li>
-				<li>Vite HMR updates (if launched locally)</li>
-				<li>SSR/SSG + hydration <em>(experimental)</em></li></ul> <p>Note that each counter below takes an initial <code>count</code> attribute with an <code>award</code> value, at which
+			<intro-tag data-svelte-retag-hydratable=""><svelte-retag><h2>About this demo</h2> <svelte-retag-default>
+				<p>Built with <code>es</code> format and included via <code>&lt;script type="module"&gt;</code> with
+					HTML pre-rendered and components initialized after page load to enable interactivity (a.k.a.
+					“<a href="https://en.wikipedia.org/wiki/Hydration_(web_development)" target="_blank" rel="noopener">hydrated</a>”).
+				</p>
+				<p>
+					CLS can occur when your <code>svelte-retag</code> web components loaded as modules don't render until after
+					the HTML on the rest of the page has finished parsing. SSR/SSG combined with hydration helps to eliminate this
+					by pushing the code responsible for <em>displaying</em> your web components immediately along with the rest of
+					the page. Interactivity is then restored to those components once modules (which are
+					<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes" target="_blank" rel="noopener">always
+						deferred</a>) have finished loading.</p>
+			</svelte-retag-default> <h2>Performance</h2> <p>You can compare performance in each demo by opening DevTools, disabling cache, and then enabling network throttling
+				(e.g. try "Fast 3G").</p> <h2>Features</h2> <p>This demo is implemented entirely using Svelte and placed in the page as custom elements (a.k.a. "web components")
+				using <code>svelte-retag</code>. It demonstrates:</p> <ul><li>Slots (default and named slots)</li> <li>Nesting within slots</li> <li>The differences between deferred Modules and IIFE, particularly with regard to CLS (Content
+				Layout Shift)</li> <li>Vite HMR updates (if launched locally)</li> <li>SSR/SSG + hydration <em>(experimental)</em></li></ul> <p>Note that each counter below takes an initial <code>count</code> attribute with an <code>award</code> value, at which
 				point a 🎉 emoji is first displayed (with randomized emojis after that). Press <code>+</code> or <code>-</code> keys on
 				your keyboard to quickly increase/decrease the count.</p></svelte-retag></intro-tag>
 
@@ -55,12 +54,9 @@
 
 			<example-tag data-svelte-retag-hydratable=""><svelte-retag><div class="wrapper svelte-15rtm5g"><div class="title svelte-15rtm5g"><p slot="title" data-svelte-retag-slot="">Nested slot: "Total is"</p></div> <div class="content svelte-15rtm5g"><counter-tag slot="content" data-svelte-retag-slot="" data-svelte-retag-hydratable=""><svelte-retag><button title="Tip: Press + or - while focused on this button." class="svelte-1cko5ar"><img src="/assets/svelte.svg" alt="svelte logo" class="svelte-1cko5ar"> <svelte-retag-default>Total is</svelte-retag-default> 0 </button></svelte-retag></counter-tag></div></div></svelte-retag></example-tag>
 
-		</svelte-retag-default> <p class="loading-status svelte-1ljvyts">This component rendered after <span>258.70ms</span>.</p></main></svelte-retag></app-tag>
+		</svelte-retag-default></main></svelte-retag></app-tag>
 
 	</div>
-
-	<!-- Reference some large external scripts to intentionally increase DOMContentLoaded time. -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.js"></script>
 
 </body>
 </html>
