Issue #10: WIP: Instead of queuing elements in an array, moving to pure querySelectorAll() for compatibility across both light DOM and shadow DOM (since that always returns document order, per spec). Cleaning up some console logs and debug code.

--- a/demo/tabs.html
+++ b/demo/tabs.html
@@ -41,9 +41,11 @@
 
 					<tab-panel>
 						<h2>First nested panel</h2>
+						<counter-tag count="1" award="5"></counter-tag>
 					</tab-panel>
 					<tab-panel>
 						<h2>Second nested panel</h2>
+						<counter-tag count="2" award="5"></counter-tag>
 					</tab-panel>
 				</tabs-wrapper>
 
@@ -52,10 +54,12 @@
 
 			<tab-panel>
 				<h2>Second panel</h2>
+				<counter-tag count="3" award="5"></counter-tag>
 			</tab-panel>
 
 			<tab-panel>
 				<h2>Third panel</h2>
+				<counter-tag count="4" award="5"></counter-tag>
 			</tab-panel>
 		</tabs-wrapper>
 
