Issue #10: WIP: Consolidating 'data-svelte-retag-dom' into 'data-svelte-retag-render', as it's only necessary for render. Cleans final rendered HTML (leaves no extra attribs behind).

--- a/demo/tabs.html
+++ b/demo/tabs.html
@@ -11,15 +11,13 @@
 
 	<div id="app">
 		<h1>Tabs demo</h1>
-		<!-- TODO: Write up explanation of what is happening below. -->
-		<p>Thanks to
+		<p>Credit to
 			<a href="https://stackoverflow.com/users/1990514/amir-pournasserian" target="_blank" rel="noopener">AmirPournasserian</a>
 			from
 			<a href="https://stackoverflow.com/questions/75024281/how-to-avoid-overwriting-context-in-nested-components-like-tabs-in-svelte" target="_blank" rel="noopener">
-				this StackOverflow post</a> for the tab components which rely on this context.</p>
+				this StackOverflow post</a> for the tab components.</p>
 
-		<!-- TODO: All contents below are a WIP during debugging -->
-
+		<!-- Fully working demo but rendered entirely as one svelte component -->
 		<!--<tabs-demo></tabs-demo>-->
 
 		<!-- Top level context -->
