Minor: Removing some jank in the demo, setting width/height on logo the old fashioned way. 👴

--- a/demo/hydratable.html
+++ b/demo/hydratable.html
@@ -24,8 +24,8 @@
 			CSS (for better code splitting) and restoring interactivity once assets have loaded.
 		-->
 
-		<app-tag pagetitle="Module with Hydration" page="hydratable" data-svelte-retag-hydratable=""><svelte-retag><main class="svelte-694cvq"><div class="svelte-694cvq"><a href="https://github.com/patricknelson/svelte-retag/" target="_blank" rel="noreferrer"><img src="/assets/svelte-retag.svg" class="logo svelte-694cvq" alt="svelte-retag logo (link to GitHub repo)"></a></div> <nav class="svelte-694cvq">Demos:
-			<ul class="svelte-694cvq"><li class="svelte-694cvq"><a href="index.html" class="svelte-694cvq">Module</a></li><li class="svelte-694cvq"><a href="hydratable.html" class="svelte-694cvq current">Module with Hydration</a></li><li class="svelte-694cvq"><a href="iife.html" class="svelte-694cvq">IIFE/UMD</a></li></ul></nav> <h1>Module with Hydration</h1> <svelte-retag-default>
+		<app-tag pagetitle="Module with Hydration" page="hydratable" data-svelte-retag-hydratable=""><svelte-retag><main class="svelte-1did21k"><div class="svelte-1did21k"><a href="https://github.com/patricknelson/svelte-retag/" target="_blank" rel="noreferrer"><img src="/assets/svelte-retag.svg" class="logo svelte-1did21k" alt="svelte-retag logo (link to GitHub repo)" width="403" height="96"></a></div> <nav class="svelte-1did21k">Demos:
+			<ul class="svelte-1did21k"><li class="svelte-1did21k"><a href="index.html" class="svelte-1did21k">Module</a></li><li class="svelte-1did21k"><a href="hydratable.html" class="svelte-1did21k current">Module with Hydration</a></li><li class="svelte-1did21k"><a href="iife.html" class="svelte-1did21k">IIFE/UMD</a></li></ul></nav> <h1>Module with Hydration</h1> <svelte-retag-default>
 
 			<intro-tag data-svelte-retag-hydratable=""><svelte-retag><h2>About this demo</h2> <svelte-retag-default>
 				<p>Built with <code>es</code> format and included via <code>&lt;script type="module"&gt;</code> with
@@ -119,5 +119,6 @@
 		</svelte-retag-default></main></svelte-retag></app-tag>
 
 	</div>
+
 </body>
 </html>
