--- a/demo/vercel/iife.html
+++ b/demo/vercel/iife.html
@@ -10,7 +10,7 @@
 	it expects all script references to be modules (but still supports compiling to IIFE). IIFE/UMD is still quite valuable
 	for our purposes, however: rendering custom elements very quickly and early with reduced CLS. Anyway, we must manually
 	point to the assets here, since Vite expects scripts to be modules, this page won't really work without some trickery. -->
-	<script src="assets/main.iife.js"></script>
+	<script src="js/main.iife.js"></script>
 
 </head>
 <body>
